<resources>
    <string-array name="reseptit">
        <item>Hernekeitto</item>
        <item>Kanariisi</item>
        <item>Nistipata</item>
        <item>Kalakeitto</item>
        <item>Perunamuussi</item>
        <item>Sämpylät</item>
        <item>Kurkkukeitto</item>
        <item>makaronilaatikko</item>
        <item>kinkkukiusaus</item>
    </string-array>

    <string-array name="ostoslista">
        <item>Osta tää</item>
        <item>Tää kans</item>
        <item>Tää on hyvä</item>
        <item>Älä unoha tätä</item>
        <item>Perunat</item>
        <item>Sämpylät</item>
        <item>Kurkku</item>
        <item>Sipuli</item>
    </string-array>

    <string name="app_name">Ostoslista</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipes">Recipes</string>
    <string name="view_recipe">View</string>
    <string name="delete_recipe">Delete</string>
    <string name="add_product_to_shopping_list">Add product to shopping list</string>
    <string name="clear_selection">Clear selection</string>
</resources>