<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundsininen"
    android:orientation="vertical">

    <EditText
        android:id="@+id/recipeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_name"
        android:textSize="26sp"
        android:textColor="@color/tummasininen"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:id="@+id/addIngredientLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/addIngredientEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/add_ingredient"
            android:textColor="@color/tummasininen"
            android:layout_alignParentStart="true"/>
        <Button
            android:id="@+id/addIngredientButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@color/white"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/recipeScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fillViewport="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:id="@+id/recipeIngredientLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="30dp">

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/addRecipeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/cancelRecipeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:textColor="@color/white"/>



    </LinearLayout>


</LinearLayout>