<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/addRecipeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_recipe"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recipeName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/recipeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_name"
        android:textSize="26sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/addRecipeHeader"
        app:layout_constraintBottom_toTopOf="@id/addIngredientLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:inputType="text"/>

    <RelativeLayout
        android:id="@+id/addIngredientLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/recipeName"
        app:layout_constraintBottom_toTopOf="@id/recipeScrollView"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/addIngredientEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/add_ingredient"
            android:textColor="@color/grey"
            android:layout_alignParentStart="true"/>
        <Button
            android:id="@+id/addIngredientButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"/>


    </RelativeLayout>


    <ScrollView
        android:id="@+id/recipeScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fillViewport="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addIngredientLayout"
        app:layout_constraintBottom_toTopOf="@id/buttonLayout"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_max="500dp"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:id="@+id/recipeIngredientLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="30dp">

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recipeScrollView"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/cancelRecipeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:layout_alignParentEnd="true"/>

        <Button
            android:id="@+id/addRecipeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:layout_alignParentStart="true"/>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>